[gd_scene load_steps=95 format=2]

[ext_resource path="res://Scenes/Desktop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Mouse.gd" type="Script" id=2]
[ext_resource path="res://Images/Cursor/XP/xp_arrow.png" type="Texture" id=3]
[ext_resource path="res://Shaders/CRT.tres" type="Material" id=4]
[ext_resource path="res://Scenes/Window.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/PhysicsMouse.gd" type="Script" id=6]
[ext_resource path="res://Scripts/StaticBody2D-AnchorToScreen.gd" type="Script" id=7]
[ext_resource path="res://Scripts/AudioManager.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Transition.gd" type="Script" id=9]
[ext_resource path="res://SoundEffects/Background Noise/Computer Boot Up With BackgroundNoise1 Fade In.wav" type="AudioStream" id=10]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=11]
[ext_resource path="res://Images/Icons/Power/Power_Off_WindowsXP.png" type="Texture" id=12]
[ext_resource path="res://Fonts/m6x11.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Images/Icons/Power/Power_Off_WindowsXP_Pressed.png" type="Texture" id=14]
[ext_resource path="res://Images/Icons/Power/Power_Off_WindowsXP_Highlight.png" type="Texture" id=15]
[ext_resource path="res://Scripts/PauseScreen.gd" type="Script" id=16]
[ext_resource path="res://Scripts/QuitButton.gd" type="Script" id=17]
[ext_resource path="res://Shaders/BackgroundBlur.tres" type="Material" id=18]
[ext_resource path="res://Scripts/Keyboard.gd" type="Script" id=19]
[ext_resource path="res://Shaders/Distortion.tres" type="Material" id=20]
[ext_resource path="res://Shaders/Glitch.tres" type="Material" id=21]
[ext_resource path="res://Shaders/CRTClose.tres" type="Material" id=22]
[ext_resource path="res://Shaders/VirusGlitch.tres" type="Material" id=23]
[ext_resource path="res://Scenes/Terminal.tscn" type="PackedScene" id=24]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/BooleanCondition.gd" type="Script" id=25]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=26]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=27]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=28]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=29]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/FloatCondition.gd" type="Script" id=30]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=31]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/IntegerCondition.gd" type="Script" id=32]

[sub_resource type="PhysicsMaterial" id=2]
absorbent = true

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 480, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 274 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 484, 20 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20, 273.75 )

[sub_resource type="PhysicsMaterial" id=11]
bounce = 1.0
absorbent = true

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 1
outline_color = Color( 0.952941, 0.952941, 0.952941, 1 )
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=7]
resource_name = "fade_from_black"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/FadeInTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Resource" id=12]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 328, 140 )
}
name = "Entry"

[sub_resource type="Resource" id=13]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 1048, 140 )
}
name = "Exit"

[sub_resource type="Resource" id=14]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 388, 180 )
}
name = "Entry"

[sub_resource type="Resource" id=30]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 988, 180 )
}
name = "Exit"

[sub_resource type="Resource" id=42]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 917, 0 )
}
name = "Fade Out Correct Transition"

[sub_resource type="Resource" id=41]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 924.5, 260 )
}
name = "Fade Out Error Transition"

[sub_resource type="Resource" id=15]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 588, 180 )
}
name = "Idle"

[sub_resource type="Resource" id=36]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 534, 0 )
}
name = "Play Correct Transition"

[sub_resource type="Resource" id=29]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 936, 440 )
}
name = "Play Wrong Transition"

[sub_resource type="Resource" id=16]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 568.5, 520 )
}
name = "Spawn Virus"

[sub_resource type="Resource" id=17]
script = ExtResource( 27 )
from = "Entry"
to = "Idle"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=49]
script = ExtResource( 31 )
name = "TransitionFinished"

[sub_resource type="Resource" id=50]
script = ExtResource( 27 )
from = "Fade Out Correct Transition"
to = "Exit"
conditions = {
"TransitionFinished": SubResource( 49 )
}
priority = 0

[sub_resource type="Resource" id=55]
script = ExtResource( 31 )
name = "TransitionFinished"

[sub_resource type="Resource" id=56]
script = ExtResource( 27 )
from = "Fade Out Correct Transition"
to = "Idle"
conditions = {
"TransitionFinished": SubResource( 55 )
}
priority = 1

[sub_resource type="Resource" id=45]
script = ExtResource( 31 )
name = "TransitionFinished"

[sub_resource type="Resource" id=46]
script = ExtResource( 27 )
from = "Fade Out Error Transition"
to = "Idle"
conditions = {
"TransitionFinished": SubResource( 45 )
}
priority = 0

[sub_resource type="Resource" id=53]
script = ExtResource( 31 )
name = "DeleteVirus"

[sub_resource type="Resource" id=54]
script = ExtResource( 27 )
from = "Idle"
to = "Play Correct Transition"
conditions = {
"DeleteVirus": SubResource( 53 )
}
priority = 0

[sub_resource type="Resource" id=31]
script = ExtResource( 31 )
name = "WrongFileDeleted"

[sub_resource type="Resource" id=32]
script = ExtResource( 27 )
from = "Idle"
to = "Play Wrong Transition"
conditions = {
"WrongFileDeleted": SubResource( 31 )
}
priority = 0

[sub_resource type="Resource" id=25]
script = ExtResource( 30 )
name = "IdleTimer"
comparation = 4
value = 1.0

[sub_resource type="Resource" id=18]
script = ExtResource( 25 )
name = "isVirusSpawned"
comparation = 0
value = false

[sub_resource type="Resource" id=19]
script = ExtResource( 27 )
from = "Idle"
to = "Spawn Virus"
conditions = {
"IdleTimer": SubResource( 25 ),
"isVirusSpawned": SubResource( 18 )
}
priority = 0

[sub_resource type="Resource" id=76]
script = ExtResource( 32 )
name = "Health"
comparation = 0
value = 0

[sub_resource type="Resource" id=75]
script = ExtResource( 27 )
from = "Idle"
to = "Exit"
conditions = {
"Health": SubResource( 76 )
}
priority = 0

[sub_resource type="Resource" id=47]
script = ExtResource( 31 )
name = "FadeOutTransition"

[sub_resource type="Resource" id=48]
script = ExtResource( 27 )
from = "Play Correct Transition"
to = "Fade Out Correct Transition"
conditions = {
"FadeOutTransition": SubResource( 47 )
}
priority = 0

[sub_resource type="Resource" id=43]
script = ExtResource( 31 )
name = "FadeOutTransition"

[sub_resource type="Resource" id=44]
script = ExtResource( 27 )
from = "Play Wrong Transition"
to = "Fade Out Error Transition"
conditions = {
"FadeOutTransition": SubResource( 43 )
}
priority = 0

[sub_resource type="Resource" id=20]
script = ExtResource( 27 )
from = "Spawn Virus"
to = "Idle"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=21]
script = ExtResource( 29 )
__meta__ = {
"graph_offset": Vector2( 528, 140 )
}
name = "Level1"
states = {
"Entry": SubResource( 14 ),
"Exit": SubResource( 30 ),
"Fade Out Correct Transition": SubResource( 42 ),
"Fade Out Error Transition": SubResource( 41 ),
"Idle": SubResource( 15 ),
"Play Correct Transition": SubResource( 36 ),
"Play Wrong Transition": SubResource( 29 ),
"Spawn Virus": SubResource( 16 )
}
transitions = {
"Entry": {
"Idle": SubResource( 17 )
},
"Fade Out Correct Transition": {
"Exit": SubResource( 50 ),
"Idle": SubResource( 56 )
},
"Fade Out Error Transition": {
"Idle": SubResource( 46 )
},
"Idle": {
"Exit": SubResource( 75 ),
"Play Correct Transition": SubResource( 54 ),
"Play Wrong Transition": SubResource( 32 ),
"Spawn Virus": SubResource( 19 )
},
"Play Correct Transition": {
"Fade Out Correct Transition": SubResource( 48 )
},
"Play Wrong Transition": {
"Fade Out Error Transition": SubResource( 44 )
},
"Spawn Virus": {
"Idle": SubResource( 20 )
}
}

[sub_resource type="Resource" id=51]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 688, 140 )
}
name = "Level2"

[sub_resource type="Resource" id=58]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 674.5, 380 )
}
name = "GameOver"

[sub_resource type="Resource" id=59]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 848, 140 )
}
name = "State"

[sub_resource type="Resource" id=72]
script = ExtResource( 26 )
__meta__ = {
"graph_offset": Vector2( 900.5, 380 )
}
name = "GameOverTransition"

[sub_resource type="Resource" id=22]
script = ExtResource( 27 )
from = "Entry"
to = "Level1"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=60]
script = ExtResource( 32 )
name = "Health"
comparation = 1
value = 0

[sub_resource type="Resource" id=57]
script = ExtResource( 27 )
from = "Level1"
to = "Level2"
conditions = {
"Health": SubResource( 60 )
}
priority = 0

[sub_resource type="Resource" id=61]
script = ExtResource( 32 )
name = "Health"
comparation = 0
value = 0

[sub_resource type="Resource" id=62]
script = ExtResource( 27 )
from = "Level1"
to = "GameOver"
conditions = {
"Health": SubResource( 61 )
}
priority = 0

[sub_resource type="Resource" id=63]
script = ExtResource( 32 )
name = "Health"
comparation = 0
value = 0

[sub_resource type="Resource" id=64]
script = ExtResource( 27 )
from = "Level2"
to = "GameOver"
conditions = {
"Health": SubResource( 63 )
}
priority = 0

[sub_resource type="Resource" id=65]
script = ExtResource( 32 )
name = "Health"
comparation = 1
value = 0

[sub_resource type="Resource" id=52]
script = ExtResource( 27 )
from = "Level2"
to = "State"
conditions = {
"Health": SubResource( 65 )
}
priority = 0

[sub_resource type="Resource" id=66]
script = ExtResource( 32 )
name = "Health"
comparation = 1
value = 0

[sub_resource type="Resource" id=67]
script = ExtResource( 27 )
from = "State"
to = "Exit"
conditions = {
"Health": SubResource( 66 )
}
priority = 0

[sub_resource type="Resource" id=68]
script = ExtResource( 32 )
name = "Health"
comparation = 0
value = 0

[sub_resource type="Resource" id=69]
script = ExtResource( 27 )
from = "State"
to = "GameOver"
conditions = {
"Health": SubResource( 68 )
}
priority = 0

[sub_resource type="Resource" id=70]
script = ExtResource( 31 )
name = "GameOverTransition"

[sub_resource type="Resource" id=71]
script = ExtResource( 27 )
from = "GameOver"
to = "GameOverTransition"
conditions = {
"GameOverTransition": SubResource( 70 )
}
priority = 0

[sub_resource type="Resource" id=73]
script = ExtResource( 31 )
name = "TransitionFinished"

[sub_resource type="Resource" id=74]
script = ExtResource( 27 )
from = "GameOverTransition"
to = "Exit"
conditions = {
"TransitionFinished": SubResource( 73 )
}
priority = 0

[sub_resource type="Resource" id=24]
script = ExtResource( 29 )
name = ""
states = {
"Entry": SubResource( 12 ),
"Exit": SubResource( 13 ),
"GameOver": SubResource( 58 ),
"GameOverTransition": SubResource( 72 ),
"Level1": SubResource( 21 ),
"Level2": SubResource( 51 ),
"State": SubResource( 59 )
}
transitions = {
"Entry": {
"Level1": SubResource( 22 )
},
"GameOver": {
"GameOverTransition": SubResource( 71 )
},
"GameOverTransition": {
"Exit": SubResource( 74 )
},
"Level1": {
"GameOver": SubResource( 62 ),
"Level2": SubResource( 57 )
},
"Level2": {
"GameOver": SubResource( 64 ),
"State": SubResource( 52 )
},
"State": {
"Exit": SubResource( 67 ),
"GameOver": SubResource( 69 )
}
}

[node name="Node2D" type="Node2D"]
position = Vector2( -2, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
physics_material_override = SubResource( 2 )
script = ExtResource( 7 )

[node name="Taskbar" type="CollisionShape2D" parent="StaticBody2D" groups=["ScreenColliders"]]
position = Vector2( 480, 550 )
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="StaticBody2D" groups=["ScreenColliders"]]
position = Vector2( -20, 266 )
shape = SubResource( 3 )

[node name="Top" type="CollisionShape2D" parent="StaticBody2D" groups=["ScreenColliders"]]
position = Vector2( 476, -20 )
shape = SubResource( 4 )

[node name="Right" type="CollisionShape2D" parent="StaticBody2D" groups=["ScreenColliders"]]
position = Vector2( 980, 266.25 )
shape = SubResource( 5 )

[node name="Node" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
script = ExtResource( 9 )

[node name="Desktop" parent="CanvasLayer" instance=ExtResource( 1 )]
__meta__ = {
"_edit_lock_": true
}

[node name="FileExplorer" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_left = 137.0
margin_top = 92.0
margin_right = 777.0
margin_bottom = 452.0

[node name="Terminal" parent="CanvasLayer" instance=ExtResource( 24 )]
mouse_filter = 2

[node name="Mouse" type="Node2D" parent="CanvasLayer" groups=["Mouse"]]
pause_mode = 2
script = ExtResource( 2 )

[node name="MouseSprite" type="Position2D" parent="CanvasLayer/Mouse"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/Mouse/MouseSprite"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
centered = false

[node name="KinematicBody" type="KinematicBody2D" parent="CanvasLayer/Mouse"]
use_parent_material = true
position = Vector2( 2, 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Mouse/KinematicBody"]
position = Vector2( -2, -4 )
scale = Vector2( 0.8, 0.8 )
polygon = PoolVector2Array( 12.5, 11.25, 10, 21.25, 0, 17.5, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="PhysicsMouse" type="RigidBody2D" parent="CanvasLayer/Mouse"]
use_parent_material = true
position = Vector2( 2, 4 )
mass = 10.0
physics_material_override = SubResource( 11 )
gravity_scale = 10.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
linear_velocity = Vector2( 1000, 0 )
script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Mouse/PhysicsMouse"]
position = Vector2( -2, -4 )
scale = Vector2( 0.8, 0.8 )
polygon = PoolVector2Array( 12.5, 11.25, 10, 21.25, 0, 17.5, 0, 0 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Post-Processing Effects" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Wrong File Glitch" type="Control" parent="CanvasLayer/Post-Processing Effects"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Effect" type="ColorRect" parent="CanvasLayer/Post-Processing Effects/Wrong File Glitch"]
material = ExtResource( 21 )
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="CanvasLayer/Post-Processing Effects/Wrong File Glitch"]
copy_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Distortion" type="Control" parent="CanvasLayer/Post-Processing Effects"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Effect" type="ColorRect" parent="CanvasLayer/Post-Processing Effects/Distortion"]
material = ExtResource( 20 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="CanvasLayer/Post-Processing Effects/Distortion"]
copy_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Virus Glitch" type="Control" parent="CanvasLayer/Post-Processing Effects"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Effect" type="ColorRect" parent="CanvasLayer/Post-Processing Effects/Virus Glitch"]
material = ExtResource( 23 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="CanvasLayer/Post-Processing Effects/Virus Glitch"]
copy_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CRT Close" type="Control" parent="CanvasLayer/Post-Processing Effects"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="Effect" type="ColorRect" parent="CanvasLayer/Post-Processing Effects/CRT Close"]
material = ExtResource( 22 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="CanvasLayer/Post-Processing Effects/CRT Close"]
copy_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CRT Filter" type="Control" parent="CanvasLayer/Post-Processing Effects"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Effect" type="ColorRect" parent="CanvasLayer/Post-Processing Effects/CRT Filter"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="CanvasLayer/Post-Processing Effects/CRT Filter"]
copy_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="PauseScreen" type="Control" parent="CanvasLayer"]
pause_mode = 1
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )

[node name="Background" type="ColorRect" parent="CanvasLayer/PauseScreen"]
material = ExtResource( 18 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseScreen/CenterContainer"]
margin_left = 353.0
margin_top = 238.0
margin_right = 607.0
margin_bottom = 302.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PauseScreen/CenterContainer/VBoxContainer"]
margin_right = 254.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="CanvasLayer/PauseScreen/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 254.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Do you wish to Quit?"

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/PauseScreen/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 254.0
margin_bottom = 64.0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/PauseScreen/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 111.0
margin_right = 143.0
margin_bottom = 32.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
script = ExtResource( 17 )

[node name="FadeInTransition" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
anims/fade_from_black = SubResource( 7 )

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 11 )

[node name="StateMachinePlayer" type="Node" parent="GameManager"]
script = ExtResource( 28 )
state_machine = SubResource( 24 )

[node name="AudioManager" type="Node" parent="."]
script = ExtResource( 8 )

[node name="BackgroundNoiseStartUp" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 10 )
bus = "Background"

[node name="Keyboard" type="Node" parent="."]
script = ExtResource( 19 )

[connection signal="body_entered" from="CanvasLayer/Mouse/PhysicsMouse" to="CanvasLayer/Mouse/PhysicsMouse" method="_on_PhysicsMouse_body_entered"]
[connection signal="pressed" from="CanvasLayer/PauseScreen/CenterContainer/VBoxContainer/CenterContainer2/TextureButton" to="CanvasLayer/PauseScreen/CenterContainer/VBoxContainer/CenterContainer2/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="entered" from="GameManager/StateMachinePlayer" to="GameManager" method="_on_StateMachinePlayer_entered"]
[connection signal="exited" from="GameManager/StateMachinePlayer" to="GameManager" method="_on_StateMachinePlayer_exited"]
[connection signal="transited" from="GameManager/StateMachinePlayer" to="GameManager" method="_on_StateMachinePlayer_transited"]
[connection signal="updated" from="GameManager/StateMachinePlayer" to="GameManager" method="_on_StateMachinePlayer_updated"]
